# HOG-BGR-with-visualization

./: LICENSE  README.md  requirement.txt  setup.cfg  setup.py
hogBGR/: HOG.py  HOGvisualized.py  SampleCode.py  __init__.py  util.py
hogBGR.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
