[metadata]
name = hogBGR
version = 0.0.1
author = Yoshi
author_email = yoshi4868686@gmail.com
description = HOG feature descriptor with visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ycc789741ycc/HOG-BGR-with-visualization
project_urls = 
    Source Code = https://github.com/ycc789741ycc/HOG-BGR-with-visualization
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True